RESOLVED FIXED60599
CorrectionPanel sometimes hangs in dismissSoon().
https://bugs.webkit.org/show_bug.cgi?id=60599
Summary CorrectionPanel sometimes hangs in dismissSoon().
Jia Pu
Reported 2011-05-10 17:45:12 PDT
It's likely due to CorrectionPanel::handleAcceptedReplacement() returns before dismissSoon() acquires lock, and m_resultForSynchronousDismissal is set to nil for some reason. In this case, dismissSoon() will indefinitely waiting on the condition. <rdar://problem/9313628>
Attachments
Patch (v1) (9.07 KB, patch)
2011-05-11 09:44 PDT, Jia Pu
no flags
Jia Pu
Comment 1 2011-05-11 09:44:28 PDT
Created attachment 93134 [details] Patch (v1)
WebKit Commit Bot
Comment 2 2011-05-11 16:16:20 PDT
Comment on attachment 93134 [details] Patch (v1) Clearing flags on attachment: 93134 Committed r86281: <http://trac.webkit.org/changeset/86281>
WebKit Commit Bot
Comment 3 2011-05-11 16:16:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.