Source/WebKit2/UIProcess/mac/CorrectionPanel.mm
@@ -53,6 +53,7 @@ CorrectionPanel::CorrectionPanel()
     : m_wasDismissedExternally(false)
     , m_reasonForDismissing(ReasonForDismissingCorrectionPanelIgnored)
     , m_resultCondition(AdoptNS, [[NSCondition alloc] init])
+    , m_isDismissing(false)
 {
 }
 
@@ -85,6 +86,7 @@ void CorrectionPanel::show(WKView* view, CorrectionPanelInfo::PanelType type, co
     [spellChecker showCorrectionIndicatorOfType:indicatorType primaryString:replacementStringAsNSString alternativeStrings:alternativeStrings forStringInRect:boundingBoxOfReplacedString view:m_view.get() completionHandler:^(NSString* acceptedString) {
         handleAcceptedReplacement(acceptedString, replacedStringAsNSString, replacementStringAsNSString, indicatorType);
     }];
+    m_isDismissing = false;
 }
 
 void CorrectionPanel::dismiss(ReasonForDismissingCorrectionPanel reason)
@@ -94,12 +96,9 @@ void CorrectionPanel::dismiss(ReasonForDismissingCorrectionPanel reason)
 
 String CorrectionPanel::dismissSoon(ReasonForDismissingCorrectionPanel reason)
 {
-    if (!isShowing())
-        return String();
-
     dismissInternal(reason, true);
     [m_resultCondition.get() lock];
-    while (!m_resultForSynchronousDismissal)
+    while (m_isDismissing)
         [m_resultCondition.get() wait];
     [m_resultCondition.get() unlock];
     return m_resultForSynchronousDismissal.get();
@@ -107,10 +106,11 @@ String CorrectionPanel::dismissSoon(ReasonForDismissingCorrectionPanel reason)
 
 void CorrectionPanel::dismissInternal(ReasonForDismissingCorrectionPanel reason, bool dismissingExternally)
 {
-    m_wasDismissedExternally = dismissingExternally;
     if (!isShowing())
         return;
-    
+
+    m_isDismissing = true;
+    m_wasDismissedExternally = dismissingExternally;
     m_reasonForDismissing = reason;
     m_resultForSynchronousDismissal.clear();
     [[NSSpellChecker sharedSpellChecker] dismissCorrectionIndicatorForView:m_view.get()];
@@ -148,14 +148,13 @@ void CorrectionPanel::handleAcceptedReplacement(NSString* acceptedReplacement, N
         break;
     }
     
-    if (!m_wasDismissedExternally) {
+    if (!m_wasDismissedExternally)
         [m_view.get() handleCorrectionPanelResult:acceptedReplacement];
-        return;
-    }
-    
-    [m_resultCondition.get() lock];
     if (acceptedReplacement)
         m_resultForSynchronousDismissal.adoptNS([acceptedReplacement copy]);
+    
+    [m_resultCondition.get() lock];
+    m_isDismissing = false;
     [m_resultCondition.get() signal];
     [m_resultCondition.get() unlock];
 }
